# EventPS-GUI-

./: .gitattributes  .gitignore  .gitmodules  CNN_GUI_USAGE.md  Cargo.toml  README  README.md  auto_train_ps_fcn.sh  build.rs  generate_evaluation_report.py  操作文档.md
arduino/v1/: v1.ino
data/: README.md  enable_all.ini
data/prophesee/: demo.ini
data/prophesee/000000/: eval_cnn_ps.ini  eval_ps_fcn.ini  event.xz  event_trigger  save_event.ini
data/prophesee/000007/: eval_ls_ps.ini  eval_ps_fcn_cnn_ps.ini  event.xz  event_trigger  normal.xz  save_event.ini
data/prophesee/000009/: eval_ls_ps.ini  eval_ps_fcn_cnn_ps.ini  event.xz  event_trigger  normal.xz  save_event.ini
data/prophesee/000010/: eval_ls_ps.ini  eval_ps_fcn_cnn_ps.ini  event.xz  event_trigger  normal.xz  save_event.ini
data/sculptures_processed/: process.py
device/arduino/v2/: v2.ino
device/stl/: v1.tar.xz  v2.tar.xz
include/: loader_prophesee.h
python/: benchmark_gather_result.py  cnn_ps_eval.py  cnn_ps_train.py  diligent_convert.py  ev_cnn_ps.py  event_sort.py  event_v2e.py  event_vis.py  plot_event_rate.py  ps_fcn_eval.py  ps_fcn_train.py  render_generate_config.py  requirements.txt
python/ev_ps_fcn/: __init__.py
scripts/: diligent_convert.sh  diligent_eval.sh  render.sh
src/: lib.rs  loader.rs  ps_cl.rs
src/loader/: loader_event_reader.rs  loader_prophesee.cc  loader_prophesee.rs  loader_render.rs
src/loader/loader_render/: event_simulator.rs  render_frame.rs  video_writer.rs
src/ps_cl/: gather_ls_ps.rs  gather_ps_fcn_cnn_ps.rs  jit_kernel_sources.rs  process_chunk.rs
src/ps_cl/jit_kernel_sources/: jit_kernel_cnn_ps.rs  jit_kernel_ls_ps.rs  jit_kernel_ps_fcn.rs
